--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "bcryptjs": "^3.0.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.25",
     "@types/node": "^20.0.0",
     "prisma": "^5.0.0",
